# auto-delete-email-rust

./: Cargo.toml  README.md
.github/workflow/: build.yml
.github/workflows/: build.yml  release.yml
src/: main.rs
