[package]
name = "auto-delete-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
imap = "3.0.0-alpha.14"
